Fixed issue with footer and overflowing content

--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -40,11 +40,10 @@ a:hover, a:active{
 }
 
 footer{
-    position:absolute;
-    bottom:0;
     padding-left: 50px;
-    width:100%;
-    height:60px;   /* Height of the footer */
     background-color: gray;
     color: white;
+    width: 100%;
+    position:fixed;
+    bottom:0;
 }
